--- a/style.css
+++ b/style.css
@@ -1,14 +1,23 @@
 body
 {
-    background-color: antiquewhite;
+    background-color: burlywood;
     font-family: 'Roboto', sans-serif;
 }
 
 .Signup-box
 {
-    width: 350px;
-    height: 400px;
-    background-color: rgb(252, 252, 252);
+    width: 400px;
+    height: 550px;
+    background-color: white;
+    margin: auto;
+    border-radius: 5px;
+}
+
+.Login
+{
+    width: 400px;
+    height: 250px;
+    background-color: white;
     margin: auto;
     border-radius: 5px;
 }
@@ -16,24 +25,62 @@ body
 h1
 {
     text-align: center;
-    margin-top: 20px;
-    color: black;
+    margin-top: 15px;
 }
 
 h4
 {
-    text-align: center;
-    color: black;
+    text-align: center;   
 }
 
 form
 {
-    text-align: center;
-    color: black;
+    width: 350px;
+    margin-left: 25px;
 }
 
+form label
+{
+    display: flex;
+    margin-top: 20px;
+    font-size: 18px;
+}
+
+input
+{
+    width: 100%;
+    padding: 5px;
+    border: none;
+    border: 1px solid grey;
+    border-radius: 5px;
+    outline: none;
+}
+
+
+button
+{
+    width: 365px;
+    margin-top: 20px;
+    font-size: 18px;
+    background-color: aqua;
+    border-radius: 5px;
+
+}
 p
 {
     text-align: center;
+    padding-top: 15px;
+    font-size: 15px;
+}
+.already
+{
+    text-align: center;
     color: black;
+    font-size: 15px;
+    margin-top: -10px;
+}
+
+.already a
+{
+    color:  rgb(54, 192, 226);
 }
